# AnomalyDetection

./: .gitignore  .gitignore.save  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py  utils.py
AnomalyDetection/: main.py
AnomalyDetection/config/: __init__.py  settings.py
AnomalyDetection/core/: __init__.py  log.py
AnomalyDetection/data/: __init__.py  compile.py  frame_read.py  process_frame.py
AnomalyDetection/scripts/: quantize.py
AnomalyDetection/services/: __init__.py  detection.py  display.py  tracking.py
AnomalyDetection/utils/: __init__.py  alert_system.py  messaging.py  preprocessing.py
behaviour/: loitering.py
inference/: detection.py  tracking.py
models/: yolo_nas_l.pt.8fd9141525ad4484b729e03cccb1c066.partial  yolo_nas_l.pt.da4bb5be57ec4cb09639a35fa618334f.partial
models/yolov8n_int8_openvino_model/: metadata.yaml  yolov8n.xml
prediction/: detection.py  tracking.py
src/: config.py  test.py
src/behaviour/: loitering.py
src/config/: config.json  config_env.py
src/prediction/: bytetrack.py  detection.py  display.py  frame_read.py  optical_flow.py  pose_estimation.py  process_frame.py  tracking.py
src/scripts/: convert_onnx.py  stream_from_file.py
src/utils/: alert_system.py  compile.py  display.py  general.py  messaging.py  preprocessing.py  shared_queue.py  show_inference.py  stream_from_file.py  time.py
theft_detection.egg-info/: PKG-INFO  SOURCES.txt
utils/: general.py
